js/js.translator/testData/incremental/invalidation/moveInlineFunctionBetweenModulesWithIntraModuleInliner/lib1/l1.kt
inline fun foo(a: Int) = a * 2

inline fun bar(b: Int) = b - 3
